Enhance .htaccess for routing presentation and admin files; improve error handling and database checks in presentation.php for better stability; streamline chart initialization and live updates in view_poll.php.

--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,19 @@
 RewriteEngine On
 
+# Handle presentation.php in root directory
 RewriteCond %{REQUEST_URI} !^/404\.php$
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{DOCUMENT_ROOT}/$1.php -f
+RewriteRule ^(presentation)/?$ $1.php [L,QSA]
 
+# Handle admin files
+RewriteCond %{REQUEST_URI} !^/404\.php$
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{DOCUMENT_ROOT}/admin/$1.php -f
 RewriteRule ^([^/]+)/?$ admin/$1.php [L,QSA]
+
 ErrorDocument 404 /404.php
 
 
